k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-simple-app
spec:
  replicas: 2
  selector:
  template:
    spec:
      containers:
      - image: lbogdan/k8s-simple-app-2
        name: k8s-simple-app
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          failureThreshold: 3 # default
          periodSeconds: 5
          successThreshold: 1 # default
          timeoutSeconds: 1 # default
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          failureThreshold: 3 # default
          periodSeconds: 5
          successThreshold: 1 # default
          timeoutSeconds: 1 # default
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        configMap:
          name: k8s-simple-app
      securityContext:
        runAsUser: 1000 # node
        runAsGroup: 1000 # node
