k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-simple-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
