k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-simple-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - backend:
          service:
            name: k8s-simple-app
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ""
    secretName: k8s-simple-app-tls
